2006-11-21 nowel(S2Dao.PHP5-1.2.0-beta1)

    * add: S2DaoTestListenerTask, S2DaoTestRunnerTask

2006-11-20 nowel(S2Dao.PHP5-1.2.0-bata1)

    * add: build.properies

2006-10-22 nowel(S2Dao.PHP5-1.2.0-RC)

    * merge: S2Dao.PHP5-1.1.1 and S2Dao.PHP5-1.2.0-RC(revision. 523)

2006-10-15 nowel(S2Dao.PHP5-1.1.1)

================ S2Dao.PHP5-1.1.1(stable) 更新履歴 ===================

    * fix: QUERY, SQLアノテーション時に "$?" を含むパラメータバインドが行えない不具合を修正しました。
    * doc: ドキュメントに古いリンクが含まれているのを修正しました。
    * fix: Daoメソッド名が*Json,*Yamlのメソッドをフィルタリングしない不具合を修正しました
    * fix: SQLiteの空テーブルへのアクセスができない不具合を修正しました。

2006-10-14 nowel(S2Dao.PHP5-1.1.1)

    * fix: QUERY, SQLアノテーション時に "$?" を含むパラメータバインドが行えない不具合を修正しました。
    * doc: ドキュメントに古いリンクが含まれているのを修正しました。
    
2006-10-03 yonekawa(S2Dao.PHP5-1.2.0-RC)

    * add: ページャ情報を付加するフィルタを作成
      - dao/pager/S2Dao_PagerFilter.class.php
    * add: S2Dao_DaoCommentAnnotationReader::getFilterType()

2006-08-20 nowel(S2Dao.PHP5-1.2.0-RC)

    * modify: S2Dao_DbmsManager to S2DaoDbmsManager
      - remove: dbms.properties exp to S2DaoDbmsManager

2006-07-28 nowel(S2Dao.PHP5-1.2.0-RC)

    * added

2006-07-24 nowel(S2Dao.PHP5-1.1.0)

================ S2Dao.PHP5-1.1.0(stable) 更新履歴 ===================

    * add: 対応するDBMSに以下を追加しました。(nowel)
        - Firebird
        - Oracle
        - Sybase
    * modify: MySQL接続中にBUFFERED_QUERYを使用するように変更しました。(nowel)
    	    - PHP5.1.3 以降及び PDO 1.0.3以降であり、かつ
    	       MySQL接続中の場合にPDO::MYSQL_ATTR_USE_BUFFERED_QUERY, trueをセットします。
    * rename: S2Dao_PagerResultSetWrapperImpl -> S2Dao_PagerBasicResultSetWrapper(yonekawa)
    * add: S2Dao_Standard::usableLimitOffsetQuery (yonekawa)
           S2Dao_MySQL::usableLimitOffsetQuery
           S2Dao_PostgresSQL::usableLimitOffsetQuery
        -  DBMSでLimit,Offset句が使用可能かを返します
    * fix: IN句を含むSQLコメントが正しく処理されない不具合を修正しました。(nowel)
    * fix: SQLコメントに埋め込まれたバインド変数のネスト時に値が正しくならない不具合を修正しました。(nowel)
    * fix: QUERYアノテーション時に"order by"句を先頭に指定するとPDOExceptionが発生する不具合を修正しました。(nowel)